# swiftrag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
src/swiftrag/: __init__.py  _http.py  _retry.py  chat.py  chunking.py  core.py  embeddings.py  exceptions.py  lexical.py  llms.py  loaders.py  persistence.py  store.py  types.py
tests/: test_async_batch.py  test_chat.py  test_chunking.py  test_context.py  test_dx.py  test_filtering.py  test_hybrid.py  test_loaders.py  test_mutation.py  test_observability.py  test_providers.py  test_rag.py  test_store.py
